[tool.poetry]
name = "pyro"
version = "0.1.0"
description = "Python Refactoring"
authors = ["bdvllrs <bdvllrs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
libcst = "^1.0.1"
isort = "^5.12.0"
black = "^23.7.0"
types-setuptools = "^68.0.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyro = "pyro.cli:cli"
